infra/k8s/task-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-depl
spec:
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
        - name: tasks
          image: ganeshmani009/taskservice
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4501
---
apiVersion: v1
kind: Service
metadata:
  name: task-clusterip-srv
spec:
  selector:
    app: tasks
  ports:
    - name: tasks
      protocol: TCP
      port: 4501
      targetPort: 4501
