infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dialogapp.co
      http:
        paths:
          - path: /project
            backend:
              serviceName: project-srv-clusterip
              servicePort: 4500
          - path: /task
            backend:
              serviceName: task-clusterip-srv
              servicePort: 4501
